# model-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: org.gnome.ModelAssistant.desktop  org.gnome.ModelAssistant.metainfo.xml  org.gnome.ModelAssistant.service.in  org.gnome.modelassistant.desktop  org.gnome.modelassistant.metainfo.xml  org.gnome.modelassistant.service.in
data/dconf/db/distro.d/: 00-model-assistant-shortcuts
data/dconf/db/distro.d/locks/: 00-model-assistant-shortcuts
examples/: assistant.toml
spec/: model-assistant.spec
src/: lib.rs  main.rs
src/app/: console.rs  context.rs  mod.rs  startup.rs  window.rs
src/core/: config.rs
src/launch/: session.rs
src/runner/: ipc.rs  keeper.rs  manager.rs  mod.rs  mounts.rs  paths.rs  report.rs
