[package]
name = "model-assistant"
version = "0.2.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
gtk4 = { version = "0.11", features = ["gnome_50"] }
libadwaita = { version = "0.9", features = ["v1_9", "gtk_v4_22"] }
nix = { version = "0.30", features = ["mount", "process", "sched", "signal", "user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
unicode-width = "0.2"
vte = "0.15"

[[bin]]
name = "runner-keeper"
path = "src/bin/runner-keeper.rs"
